@@ -7,7 +7,7 @@ plugins {
     id "de.undercouch.download" version "4.0.0"
     id 'java'
     // https://github.com/tbroyer/gradle-errorprone-plugin
-    id "net.ltgt.errorprone" version "0.6.1"
+    id "net.ltgt.errorprone" version "0.8.1"
     // https://plugins.gradle.org/plugin/org.ajoberstar.grgit
     id 'org.ajoberstar.grgit' version '3.1.1' apply false
 }
@@ -125,8 +125,9 @@ allprojects {
         // Add standard javac options
         tasks.withType(JavaCompile) {
             dependsOn(':installGitHooks')
+            sourceCompatibility = 8
             if (isJava8) {
-                sourceCompatibility = 8
+                //  option --add-exports not allowed with target 1.8
                 targetCompatibility = 8
             }
             options.failOnError = true
